# short-url-service

./: .env  Cargo.toml  data.sql
src/: controller.rs  db.rs  main.rs  model.rs  utils.rs
