[package]
name = "short-url-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"

uuid = { version = "1", features = ["v4"] }
base62 = "2.2.1"